Setup react-query

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,6 +41,8 @@
     "@loopback/rest": "12.0.8",
     "@loopback/rest-explorer": "5.0.8",
     "@loopback/service-proxy": "5.0.8",
+    "loopback-connector-postgresql": "6.0.2",
+    "postgres": "3.3.3",
     "tslib": "2.0.0"
   },
   "devDependencies": {
