--- a/packages/config/eslint/.eslintrc.json
+++ b/packages/config/eslint/.eslintrc.json
@@ -46,6 +46,12 @@
         "ignoreRestSiblings": true
       }
     ],
+    "@typescript-eslint/no-empty-interface": [
+      "error",
+      {
+        "allowSingleExtends": true
+      }
+    ],
     "no-console": [
       2,
       {
