--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,10 +17,16 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.11",
+    "@mui/material": "5.11.11",
+    "@stolaar/utils": "*",
+    "@tanstack/react-query": "4.24.10",
     "axios": "1.3.4",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@stolaar/utils": "*"
+    "react-hook-form": "7.43.2"
   }
 }
