--- a/package.json
+++ b/package.json
@@ -27,5 +27,13 @@
     "hooks": {
       "pre-commit": "lint-staged --config lint-staged.config.js"
     }
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "styled-components": "^5.3.9"
   }
 }
